--- a/finah-desktop/finah-desktop/Hulpverlener.xaml
+++ b/finah-desktop/finah-desktop/Hulpverlener.xaml
@@ -1,8 +1,6 @@
-﻿<Window x:Name="Home" x:Class="finah_desktop.Hulpverlener"
+﻿<Window x:Class="finah_desktop.Hulpverlener"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         Title="Home" Height="666.406" Width="1015.675">
     <Grid Background="#48a9e4">
         <Image HorizontalAlignment="Left" Height="100" Margin="35,26,0,0" VerticalAlignment="Top" Width="100" Source="images/logo.png"/>
