--- a/finah-desktop/finah-desktop/login.xaml
+++ b/finah-desktop/finah-desktop/login.xaml
@@ -1,17 +1,14 @@
 ﻿<Window x:Name="Login" x:Class="finah_desktop.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Login" Height="300" Width="500" ResizeMode="NoResize">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="108*"/>
-            <ColumnDefinition Width="139*"/>
-        </Grid.ColumnDefinitions>
-        <Label Content="Gebruikersnaam&#xD;&#xA;" Margin="0,100,41.919,0" VerticalAlignment="Top" RenderTransformOrigin="3.157,0.38" HorizontalAlignment="Right"/>
-        <Label Content="Wachtwoord&#xD;&#xA;" Margin="0,160,41.919,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="78"/>
-        <TextBox x:Name="usr" HorizontalAlignment="Left" Height="23" Margin="190,104,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" />
-        <TextBox x:Name="ww" HorizontalAlignment="Left" Height="23" Margin="190,164,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" />
-        <Button Content="Button" HorizontalAlignment="Left" Margin="14.081,210,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-
+        Title="Login" Height="300" Width="413" ResizeMode="NoResize">
+    <Grid Background="#48a9e4" Margin="0,0,4,0">
+        <Image HorizontalAlignment="Left" Height="100" Margin="19,10,0,0" VerticalAlignment="Top" Width="100" Source="images/logo.png"/>
+        <Label Content="Finah" HorizontalAlignment="Left" Margin="125,47,0,0" VerticalAlignment="Top" FontSize="30" Foreground="White"/>
+        <Label Content="Gebruikersnaam&#xD;&#xA;" Margin="0,124,223,0" VerticalAlignment="Top" RenderTransformOrigin="3.157,0.38" HorizontalAlignment="Right"/>
+        <Label Content="Wachtwoord&#xD;&#xA;" Margin="0,166,241,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="78"/>
+        <TextBox x:Name="usr" HorizontalAlignment="Left" Height="23" Margin="180,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
+        <TextBox x:Name="ww" HorizontalAlignment="Left" Height="23" Margin="180,166,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
+        <Button Content="Login" HorizontalAlignment="Left" Margin="173,220,0,0" VerticalAlignment="Top" Click="Button_Click"/>
     </Grid>
 </Window>
