--- a/finah-desktop/finah-desktop/login.xaml
+++ b/finah-desktop/finah-desktop/login.xaml
@@ -11,7 +11,7 @@
         <Label Content="Wachtwoord&#xD;&#xA;" Margin="0,160,41.919,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="78"/>
         <TextBox x:Name="usr" HorizontalAlignment="Left" Height="23" Margin="190,104,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" />
         <TextBox x:Name="ww" HorizontalAlignment="Left" Height="23" Margin="190,164,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" />
-        <Button Content="Button" HorizontalAlignment="Left" Margin="14.081,210,0,0" VerticalAlignment="Top" Grid.Column="1" />
+        <Button Content="Button" HorizontalAlignment="Left" Margin="14.081,210,0,0" VerticalAlignment="Top" Grid.Column="1" Click="Button_Click" />
 
     </Grid>
 </Window>
