--- a/desktopapp/desktopapp/MainWindow.xaml
+++ b/desktopapp/desktopapp/MainWindow.xaml
@@ -9,6 +9,6 @@
         <Label Content="Wachtwoord&#xD;&#xA;" Margin="0,166,338,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="78"/>
         <TextBox x:Name="usr" HorizontalAlignment="Left" Height="23" Margin="180,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
         <TextBox x:Name="ww" HorizontalAlignment="Left" Height="23" Margin="180,166,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
-        <Button Content="Login" HorizontalAlignment="Left" Margin="173,220,0,0" VerticalAlignment="Top" />
+        <Button Content="Login" HorizontalAlignment="Left" Margin="173,220,0,0" VerticalAlignment="Top" Click="Button_Click" />
     </Grid>
 </Window>
