--- a/desktopapp/desktopapp/MainWindow.xaml
+++ b/desktopapp/desktopapp/MainWindow.xaml
@@ -1,14 +1,14 @@
 ﻿<Window x:Class="desktopapp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="279.851" Width="390.671">
     <Grid Background="#48a9e4" Margin="0,0,4,0">
         <Image HorizontalAlignment="Left" Height="100" Margin="19,10,0,0" VerticalAlignment="Top" Width="100" Source="images/logo.png"/>
         <Label Content="Finah" HorizontalAlignment="Left" Margin="125,47,0,0" VerticalAlignment="Top" FontSize="30" Foreground="White"/>
-        <Label Content="Gebruikersnaam&#xD;&#xA;" Margin="0,124,338,0" VerticalAlignment="Top" RenderTransformOrigin="3.157,0.38" HorizontalAlignment="Right"/>
-        <Label Content="Wachtwoord&#xD;&#xA;" Margin="0,166,338,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="78"/>
-        <TextBox x:Name="usr" HorizontalAlignment="Left" Height="23" Margin="180,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
-        <TextBox x:Name="ww" HorizontalAlignment="Left" Height="23" Margin="180,166,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
-        <Button Content="Login" HorizontalAlignment="Left" Margin="173,220,0,0" VerticalAlignment="Top" Click="Button_Click" />
+        <Label Content="Gebruikersnaam&#xD;&#xA;" Margin="0,128,170,0" VerticalAlignment="Top" RenderTransformOrigin="3.157,0.38" HorizontalAlignment="Right"/>
+        <Label Content="Wachtwoord&#xD;&#xA;" Margin="0,161,188,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="78"/>
+        <TextBox x:Name="txtNaam" HorizontalAlignment="Left" Height="23" Margin="214,133,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
+        <TextBox x:Name="txtWachtwoord" HorizontalAlignment="Left" Height="23" Margin="214,161,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
+        <Button Content="Login" HorizontalAlignment="Left" Margin="176,219,0,0" VerticalAlignment="Top" Click="Button_Click" />
     </Grid>
 </Window>
