--- a/Finah-desktop/desktopapp/MijnAccount.xaml
+++ b/Finah-desktop/desktopapp/MijnAccount.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="desktopapp.MijnAccount"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MijnAccount" Height="300" Width="300">
-    <Grid>
+        Title="Mijn Account" Height="800" Width="500" ResizeMode="NoResize">
+    <Grid Background="#48a9e4">
         
     </Grid>
 </Window>
