--- a/Finah-desktop/desktopapp/hulpverlener.xaml
+++ b/Finah-desktop/desktopapp/hulpverlener.xaml
@@ -5,7 +5,7 @@
     <Grid Background="#48a9e4">
         <Image HorizontalAlignment="Left" Height="100" Margin="35,26,0,0" VerticalAlignment="Top" Width="100" Source="images/logo.png"/>
         <Label Content="Finah" HorizontalAlignment="Left" Margin="140,59,0,0" VerticalAlignment="Top" FontSize="30" Foreground="White"/>
-        <Button Content="Mijn Account" HorizontalAlignment="Left" Margin="818,26,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Mijn Account" HorizontalAlignment="Left" Margin="818,26,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
         <Button Content="Uitloggen" HorizontalAlignment="Left" Margin="910,26,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <TabControl HorizontalAlignment="Left" Height="436" Margin="140,160,0,0" VerticalAlignment="Top" Width="718">
             <TabItem Header="Overzicht">
