--- a/Finah-desktop/desktopapp/Aanvraag.xaml
+++ b/Finah-desktop/desktopapp/Aanvraag.xaml
@@ -1,24 +1,56 @@
 ﻿<Window x:Class="desktopapp.Aanvraag"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Nieuwe Aanvraag" Height="482.833" Width="388.841">
+        Title="Nieuwe Aanvraag" Height="497.758" Width="388.841">
     <Grid Background="#FFFFFF" Margin="0,1,0,-1">
         <Label Content="Algemene gegevens" FontWeight="Bold" HorizontalAlignment="Left" Margin="57,29,0,0" VerticalAlignment="Top"/>
         <Label Content="Beschrijving" HorizontalAlignment="Left" Margin="30,60,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtBeschrijving" HorizontalAlignment="Left" Height="60" Margin="108,60,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="227"/>
         <Label Content="NAH-Categorie" HorizontalAlignment="Left" Margin="30,125,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="cbo_Categorie" HorizontalAlignment="Left" Margin="126,129,0,0" VerticalAlignment="Top" Width="209"/>
+        <ComboBox x:Name="cbo_Categorie" IsSynchronizedWithCurrentItem="True" ItemsSource="{Binding}" HorizontalAlignment="Left" Margin="126,129,0,0" VerticalAlignment="Top" Width="209">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding naam}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
         <Label Content="Relatie Cliënt mantelzorger" HorizontalAlignment="Left" Margin="30,156,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="cbo_Relatie" HorizontalAlignment="Left" Margin="188,160,0,0" VerticalAlignment="Top" Width="147"/>
+        <ComboBox x:Name="cbo_Relatie" HorizontalAlignment="Left" Margin="188,160,0,0" VerticalAlignment="Top" Width="147">
+            <ComboBoxItem Content="Partners"/>
+            <ComboBoxItem Content="Ouder (met NAH) &amp; kind"/>
+            <ComboBoxItem Content="Kind (met NAH) &amp; ouder"/>
+            <ComboBoxItem Content="Andere familieband"/>
+            <ComboBoxItem Content="Andere"/>
+        </ComboBox>
         <Label Content="Overig" HorizontalAlignment="Left" Margin="30,187,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtOverig" HorizontalAlignment="Left" Height="23" Margin="80,190,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="255"/>
         <Label Content="Gegevens Cliënt" FontWeight="Bold" HorizontalAlignment="Left" Margin="57,243,0,0" VerticalAlignment="Top"/>
         <Label Content="Leeftijdscategorie" HorizontalAlignment="Left" Margin="30,274,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="cbo_LeeftijdscatCLient" HorizontalAlignment="Left" Margin="138,278,0,0" VerticalAlignment="Top" Width="197"/>
+        <ComboBox x:Name="cbo_LeeftijdscatCLient" HorizontalAlignment="Left" Margin="138,278,0,0" VerticalAlignment="Top" Width="197">
+            <ComboBoxItem Content="&lt;20 jaar"/>
+            <ComboBoxItem Content="20-30 jaar"/>
+            <ComboBoxItem Content="30-40 jaar"/>
+            <ComboBoxItem Content="40-50 jaar"/>
+            <ComboBoxItem Content="50-60 jaar"/>
+            <ComboBoxItem Content="60-70 jaar"/>
+            <ComboBoxItem Content="70-80 jaar"/>
+            <ComboBoxItem Content="&gt;80 jaar"/>
+        </ComboBox>
         <Label Content="Gegevens Mantelzorger" FontWeight="Bold" HorizontalAlignment="Left" Margin="57,327,0,0" VerticalAlignment="Top"/>
         <Label Content="Leeftijdscategorie" HorizontalAlignment="Left" Margin="30,358,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="cbo_LeeftijdscatMantel" HorizontalAlignment="Left" Margin="138,362,0,0" VerticalAlignment="Top" Width="197"/>
-        <Button Content="Verzend" HorizontalAlignment="Left" Margin="103,419,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Annuleer" HorizontalAlignment="Left" Margin="210,419,0,0" VerticalAlignment="Top" Width="75"/>
+        <ComboBox x:Name="cbo_LeeftijdscatMantel" HorizontalAlignment="Left" Margin="138,362,0,0" VerticalAlignment="Top" Width="197">
+            <ComboBoxItem Content="&lt;20 jaar"/>
+            <ComboBoxItem Content="20-30 jaar"/>
+            <ComboBoxItem Content="30-40 jaar"/>
+            <ComboBoxItem Content="40-50 jaar"/>
+            <ComboBoxItem Content="50-60 jaar"/>
+            <ComboBoxItem Content="60-70 jaar"/>
+            <ComboBoxItem Content="70-80 jaar"/>
+            <ComboBoxItem Content="&gt;80 jaar"/>
+        </ComboBox>
+        <Button x:Name="btnVerzendAanvraag" Content="Verzend" HorizontalAlignment="Left" Margin="103,419,0,0" VerticalAlignment="Top" Width="75" Click="btnVerzendAanvraag_Click"/>
+        <Button x:Name="btnAnnuleerAanvraag" Content="Annuleer" HorizontalAlignment="Left" Margin="210,419,0,0" VerticalAlignment="Top" Width="75" Click="btnAnnuleerAanvraag_Click"/>
     </Grid>
 </Window>
