--- a/main.css
+++ b/main.css
@@ -1,36 +1,57 @@
 body{
-       
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #header{
     
 }
 
+/* content */
 p{
     font-weight: bold;
 }
 div{
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
+#progressbar{
+    width: 100%;
+    height: 22px;
+    border: 1px solid #111;
+    background-color: #292929;
+}
+#progressbar div{
+    height: 100%;
+    color: #fff;
+    text-align: right;
+    line-height: 22px;
+    width: 0;
+    background-color: #0099ff;
+}
+#foto_midden{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 20em;
+    width: 15em;
+}
+
+/* footer */
 #knoppen{
     width: 100%;   
 }
 .knop_l{
-    float: left;
-    width: 33%;
-}
-.label_m{
-    text-align: center;
-    width: 33%;
-    float: left;
+    position: fixed;
+    bottom: 10px;
+    left: 20px;
 }
 .knop_r{
-    float: left;
-    width: 33%;
-    text-align: right;
+    position: fixed;
+    bottom: 10px;
+    right: 20px;
 }
-button{
+button, input[type=submit], input[type=button]{
     width: 12em;  
     height: 5em;
 }
