--- a/Finah-desktop/desktopapp/MainWindow.xaml
+++ b/Finah-desktop/desktopapp/MainWindow.xaml
@@ -8,7 +8,7 @@
         <Label Content="Gebruikersnaam&#xD;&#xA;" Margin="0,127,190,0" VerticalAlignment="Top" RenderTransformOrigin="3.157,0.38" HorizontalAlignment="Right"/>
         <Label Content="Wachtwoord&#xD;&#xA;" Margin="0,160,208,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="78"/>
         <TextBox x:Name="txtNaam" HorizontalAlignment="Left" Height="23" Margin="194,132,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" ToolTip="geef hier je gebruikersnaam in" />
-        <PasswordBox x:Name="txtWachtwoord" HorizontalAlignment="Left" Height="23" Margin="194,160,0,0" ToolTip="geef hier je wachtwoord in" VerticalAlignment="Top" Width="120" />
+        <PasswordBox x:Name="txtWachtwoord" HorizontalAlignment="Left" Height="23" Margin="194,160,0,0" ToolTip="geef hier je wachtwoord in" VerticalAlignment="Top" Width="120" KeyDown="txtWachtwoord_KeyDown" />
         <Button Content="Login" HorizontalAlignment="Left" Margin="122,199,0,0" VerticalAlignment="Top" Click="Button_Click" Width="78" />
         <Button Content="Annuleer" HorizontalAlignment="Left" Margin="211,199,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
     </Grid>
