--- a/Finah-desktop/desktopapp/hulpverlener.xaml
+++ b/Finah-desktop/desktopapp/hulpverlener.xaml
@@ -15,7 +15,7 @@
                 </Grid>
             </TabItem>
         </TabControl>
-        <TextBox Name="txtwelkom" HorizontalAlignment="Left" Height="23" Margin="269,82,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="txtwelkom" Content="Label" HorizontalAlignment="Left" Margin="244,78,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
