AdminPaneel nieuw+bewerk+verwijder

--- a/Finah-desktop/desktopapp/AdminPaneel.xaml
+++ b/Finah-desktop/desktopapp/AdminPaneel.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="desktopapp.AdminPaneel"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Administrator Paneel" Height="666.406" Width="1015.675">
+        Title="Administrator Paneel" Height="666.406" Width="1015.675" WindowStartupLocation="CenterScreen">
     <Grid Background="#48a9e4">
         <Image HorizontalAlignment="Left" Height="100" Margin="35,26,0,0" VerticalAlignment="Top" Width="100" Source="images/logo.png"/>
         <Label Content="Finah" HorizontalAlignment="Left" Margin="140,59,0,0" VerticalAlignment="Top" FontSize="30" Foreground="White"/>
@@ -35,9 +35,9 @@
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="115" />
-                                <ColumnDefinition Width="150"/>
-                                <ColumnDefinition Width="115" />
-                                <ColumnDefinition Width="150"/>
+                                <ColumnDefinition Width="183"/>
+                                <ColumnDefinition Width="114" />
+                                <ColumnDefinition Width="134"/>
                             </Grid.ColumnDefinitions>
                             <Label Content="Voornaam :" Grid.Row="0" Grid.Column="0" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="2" Margin="0,0,160,0"/>
                             <Label Content="Naam :" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,0,160,0"/>
@@ -47,7 +47,7 @@
                             <Label Content="Postcode :" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,0,160,0"/>
                             <Label Content="Telefoon :" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,0,160,0"/>
                             <Label Content="Gsm :" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,0,160,0"/>
-                            <Label Content="Functie :" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Margin="0,0,160,0"/>
+                            <Label Content="Functie :" Grid.Row="1" Grid.Column="2" Margin="0,0,9,0"/>
                             <Label Content="bedrijf :" Grid.Row="0" Grid.Column="2" Margin="2,0,10,0"/>
                             <Label Content="email :" Grid.Row="2" Grid.Column="2" Margin="2,0,10,0"/>
                             <Label Content="gebruikersnaam :" Grid.Row="3" Grid.Column="2" Margin="2,0,10,0"/>
@@ -73,6 +73,8 @@
                         </Grid>
                     </GroupBox>
                     <Button x:Name="btnNieuwGebruiker" Content="Nieuw" HorizontalAlignment="Left" Margin="282,328,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
+                    <Button  x:Name="btnBewerk" Content="Bewerk" HorizontalAlignment="Left" Margin="378,328,0,0" VerticalAlignment="Top" Width="75" Click="btnBewerk_Click_1"/>
+                    <Button x:Name="btnVerwijder" Content="Verwijder" HorizontalAlignment="Left" Margin="471,328,0,0" VerticalAlignment="Top" Width="75" Click="btnVerwijder_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Functies">
