--- a/Finah-desktop/desktopapp/NieuweGebruiker.xaml
+++ b/Finah-desktop/desktopapp/NieuweGebruiker.xaml
@@ -1,28 +1,36 @@
 ﻿<Window x:Class="desktopapp.NieuweGebruiker"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Nieuwe Gebruiker" Height="349" Width="500" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="NieuweGebruiker" Height="343" Width="512" WindowStartupLocation="CenterScreen">
     <Grid Background="#48a9e4">
-        <TextBox x:Name="txtvoornaam" HorizontalAlignment="Left" Height="23" Margin="333,45,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtgeboorte" HorizontalAlignment="Left" Height="23" Margin="333,73,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtfunctie" HorizontalAlignment="Left" Height="23" Margin="333,101,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtstraat" HorizontalAlignment="Left" Height="23" Margin="333,129,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtgsm" HorizontalAlignment="Left" Height="23" Margin="333,157,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtgeactiveerd" HorizontalAlignment="Left" Height="23" Margin="333,213,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Label Content="txtVoornaam:" HorizontalAlignment="Left" Margin="260,45,0,0" VerticalAlignment="Top"/>
-        <Label Content="txtGeboortedatum:" HorizontalAlignment="Left" Margin="231,73,0,0" VerticalAlignment="Top"/>
-        <Label Content="txtFunctie:" HorizontalAlignment="Left" Margin="277,101,0,0" VerticalAlignment="Top"/>
-        <Label Content="txtStraat:" HorizontalAlignment="Left" Margin="285,129,0,0" VerticalAlignment="Top"/>
-        <Label Content="txtGSM:" HorizontalAlignment="Left" Margin="290,157,0,0" VerticalAlignment="Top"/>
-        <Label Content="txtGeactiveerd:" HorizontalAlignment="Left" Margin="260,209,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtnaam" HorizontalAlignment="Left" Height="23" Margin="90,45,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtgeslacht" HorizontalAlignment="Left" Height="23" Margin="90,73,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtbedrijf" HorizontalAlignment="Left" Height="23" Margin="90,101,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtpostcode" HorizontalAlignment="Left" Height="23" Margin="90,129,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txttelefoon" HorizontalAlignment="Left" Height="23" Margin="90,157,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtlogin" HorizontalAlignment="Left" Height="23" Margin="90,185,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtemail" HorizontalAlignment="Left" Height="23" Margin="90,213,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtwachtwoord" HorizontalAlignment="Left" Height="23" Margin="333,185,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtvoornaam" HorizontalAlignment="Left" Height="23" Margin="333,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtgeboorte" HorizontalAlignment="Left" Height="23" Margin="333,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="cbo_Functie" IsSynchronizedWithCurrentItem="True" ItemsSource="{Binding}" HorizontalAlignment="Left" Margin="333,102,0,0" VerticalAlignment="Top" Width="120">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding functienaam}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <TextBox x:Name="txtstraat" HorizontalAlignment="Left" Height="23" Margin="333,129,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtgsm" HorizontalAlignment="Left" Height="23" Margin="333,157,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <CheckBox x:Name="cb_geactiveerd" Content="" HorizontalAlignment="Left" Margin="333,220,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,-1.733"/>
+        <Label Content="Voornaam:" HorizontalAlignment="Left" Margin="261,45,0,0" VerticalAlignment="Top"/>
+        <Label Content="Geboortedatum:" HorizontalAlignment="Left" Margin="232,73,0,0" VerticalAlignment="Top"/>
+        <Label Content="Functie:" HorizontalAlignment="Left" Margin="277,101,0,0" VerticalAlignment="Top"/>
+        <Label Content="Straat:" HorizontalAlignment="Left" Margin="286,129,0,0" VerticalAlignment="Top"/>
+        <Label Content="GSM:" HorizontalAlignment="Left" Margin="290,157,0,0" VerticalAlignment="Top"/>
+        <Label Content="Geactiveerd:" HorizontalAlignment="Left" Margin="254,213,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtnaam" HorizontalAlignment="Left" Height="23" Margin="90,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtgeslacht" HorizontalAlignment="Left" Height="23" Margin="90,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtbedrijf" HorizontalAlignment="Left" Height="23" Margin="90,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtpostcode" HorizontalAlignment="Left" Height="23" Margin="90,129,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txttelefoon" HorizontalAlignment="Left" Height="23" Margin="90,157,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtlogin" HorizontalAlignment="Left" Height="23" Margin="90,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtemail" HorizontalAlignment="Left" Height="23" Margin="90,213,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtwachtwoord" HorizontalAlignment="Left" Height="23" Margin="333,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="Naam:" HorizontalAlignment="Left" Margin="47,45,0,0" VerticalAlignment="Top"/>
         <Label Content="Geslacht:" HorizontalAlignment="Left" Margin="27,73,0,0" VerticalAlignment="Top"/>
         <Label Content="Bedrijf:" HorizontalAlignment="Left" Margin="38,101,0,0" VerticalAlignment="Top"/>
@@ -30,7 +38,7 @@
         <Label Content="Telefoon:" HorizontalAlignment="Left" Margin="26,157,0,0" VerticalAlignment="Top"/>
         <Label Content="Loginnaam:" HorizontalAlignment="Left" Margin="14,185,0,0" VerticalAlignment="Top"/>
         <Label Content="Email:" HorizontalAlignment="Left" Margin="44,209,0,0" VerticalAlignment="Top"/>
-        <Label Content="Wachtwoord:" HorizontalAlignment="Left" Margin="255,183,0,0" VerticalAlignment="Top"/>
+        <Label Content="Wachtwoord:" HorizontalAlignment="Left" Margin="253,185,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.075,0.5"/>
         <Button Content="Bevestig" HorizontalAlignment="Left" Margin="157,277,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
         <Button Content="Annuleer" HorizontalAlignment="Left" Margin="254,277,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
     </Grid>
