--- a/Finah-desktop/desktopapp/BewerkCategorie.xaml
+++ b/Finah-desktop/desktopapp/BewerkCategorie.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="desktopapp.BewerkFunctie"
+﻿<Window x:Class="desktopapp.BewerkCategorie"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BewerkFunctie" Height="342.49" Width="490.558" WindowStartupLocation="CenterScreen">
+        Title="Bewerk categorie" Height="342.49" Width="490.558" WindowStartupLocation="CenterScreen">
     <Grid Background="#48a9e4" Margin="0,0,0,-3">
         <Button x:Name="btnBevestig" Content="Bevestig" HorizontalAlignment="Left" Margin="157,277,0,0" VerticalAlignment="Top" Width="75" Click="btnBevestig_Click"/>
         <Button x:Name="btnAnnuleer" Content="Annuleer" HorizontalAlignment="Left" Margin="254,277,0,0" VerticalAlignment="Top" Width="75" Click="btnAnnuleer_Click"/>
-        <TextBox x:Name="txtfunctie" HorizontalAlignment="Left" Height="23" Margin="90,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtcategorie" HorizontalAlignment="Left" Height="23" Margin="90,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txtbeschrijving" HorizontalAlignment="Left" Height="185" Margin="90,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="338"/>
-        <Label Content="Functie:" HorizontalAlignment="Left" Margin="34,47,0,0" VerticalAlignment="Top"/>
+        <Label Content="Categorie:" HorizontalAlignment="Left" Margin="21,47,0,0" VerticalAlignment="Top"/>
         <Label Content="Beschrijving:" HorizontalAlignment="Left" Margin="9,78,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
