--- a/Finah-desktop/desktopapp/Hulpverlener.xaml
+++ b/Finah-desktop/desktopapp/Hulpverlener.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="desktopapp.hulpverlener"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Home" Height="666.406" Width="1015.675" WindowStartupLocation="CenterScreen">
+        Title="Home" Height="666.406" Width="1015.675" Activated="Window_Activated" WindowStartupLocation="CenterScreen">
     <Grid Background="#48a9e4">
         <Image HorizontalAlignment="Left" Height="100" Margin="35,26,0,0" VerticalAlignment="Top" Width="100" Source="images/logo.png"/>
         <Label Content="Finah" HorizontalAlignment="Left" Margin="140,59,0,0" VerticalAlignment="Top" FontSize="30" Foreground="White"/>
@@ -10,7 +10,7 @@
         <TabControl HorizontalAlignment="Left" Height="436" Margin="140,160,0,0" VerticalAlignment="Top" Width="718">
             <TabItem Header="Overzicht">
                 <Grid Background="#FFFFFF">
-                    <DataGrid x:Name="dg_OverzichtOnderzoeker" HorizontalAlignment="Left" Margin="26,76,0,0" VerticalAlignment="Top" Height="303" Width="660"/>
+                    <DataGrid ItemsSource="{Binding}" x:Name="dg_OverzichtOnderzoeker" HorizontalAlignment="Left" Margin="26,76,0,0" VerticalAlignment="Top" Height="303" Width="660"/>
                     <Button Content="Nieuwe aanvraag" HorizontalAlignment="Left" Margin="26,32,0,0" VerticalAlignment="Top" Width="99" Click="Button_Click_2"/>
                 </Grid>
             </TabItem>
