--- a/Finah-desktop/desktopapp/onderzoeker.xaml
+++ b/Finah-desktop/desktopapp/onderzoeker.xaml
@@ -10,7 +10,7 @@
         <TabControl HorizontalAlignment="Left" Height="436" Margin="140,160,0,0" VerticalAlignment="Top" Width="718">
             <TabItem Header="Overzicht">
                 <Grid Background="#FFFFFF">
-                    <DataGrid x:Name="dg_OverzichtOnderzoeker" HorizontalAlignment="Left" Margin="26,39,0,0" VerticalAlignment="Top" Height="340" Width="660"/>
+                    <DataGrid ItemsSource="{Binding}" x:Name="dg_OverzichtOnderzoeker" HorizontalAlignment="Left" Margin="26,39,0,0" VerticalAlignment="Top" Height="340" Width="660"/>
                 </Grid>
             </TabItem>
         </TabControl>
