--- a/Finah-desktop/desktopapp/Hulpverlener.xaml
+++ b/Finah-desktop/desktopapp/Hulpverlener.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="desktopapp.hulpverlener"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Home" Height="666.406" Width="1015.675" Activated="Window_Activated" WindowStartupLocation="CenterScreen">
+        Title="Home" Height="666.406" Width="1015.675" WindowStartupLocation="CenterScreen" Activated="Window_Activated">
     <Grid Background="#48a9e4">
-        <Image HorizontalAlignment="Left" Height="100" Margin="35,26,0,0" VerticalAlignment="Top" Width="100" Source="images/logo.png"/>
+        <Image HorizontalAlignment="Left" Height="100" Margin="35,26,0,0" VerticalAlignment="Top" Width="100" Source="images/logopxl.png"/>
         <Label Content="Finah" HorizontalAlignment="Left" Margin="140,59,0,0" VerticalAlignment="Top" FontSize="30" Foreground="White"/>
         <Button Content="Mijn Account" HorizontalAlignment="Left" Margin="818,26,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
         <Button Content="Uitloggen" HorizontalAlignment="Left" Margin="910,26,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
