--- a/Finah-desktop/desktopapp/Hulpverlener.xaml
+++ b/Finah-desktop/desktopapp/Hulpverlener.xaml
@@ -10,7 +10,16 @@
         <TabControl HorizontalAlignment="Left" Height="436" Margin="140,160,0,0" VerticalAlignment="Top" Width="718">
             <TabItem Header="Overzicht">
                 <Grid Background="#FFFFFF">
-                    <DataGrid ItemsSource="{Binding}" x:Name="dg_OverzichtOnderzoeker" HorizontalAlignment="Left" Margin="26,76,0,0" VerticalAlignment="Top" Height="303" Width="660"/>
+                    <DataGrid ItemsSource="{Binding}" x:Name="dg_OverzichtHulpverlener" HorizontalAlignment="Left" Margin="26,76,0,0" VerticalAlignment="Top" Height="303" Width="660" AutoGenerateColumns="False">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Tijdstip" IsReadOnly="True" Width="*" Binding="{Binding tijdstip,StringFormat={}\{0:dd/MM/yyyy HH:mm:ss\}}"></DataGridTextColumn>
+                        <DataGridTextColumn Header="Info" IsReadOnly="True" Width="*" Binding="{Binding patientbeschrijving}"></DataGridTextColumn>
+                        <DataGridTextColumn Header="Categorie" IsReadOnly="True" Width="*" Binding="{Binding categorie}"></DataGridTextColumn>
+                        <DataGridTextColumn Header="Relatie" IsReadOnly="True" Width="*" Binding="{Binding relatie}"></DataGridTextColumn>
+                        <DataGridTextColumn Header="P_leeftijd" IsReadOnly="True" Width="*" Binding="{Binding patientleeftijd}"></DataGridTextColumn>
+                        <DataGridTextColumn Header="M_leeftijd" IsReadOnly="True" Width="*" Binding="{Binding mantelzorgerleeftijd}"></DataGridTextColumn>
+                        </DataGrid.Columns>
+                    </DataGrid>
                     <Button Content="Nieuwe aanvraag" HorizontalAlignment="Left" Margin="26,32,0,0" VerticalAlignment="Top" Width="99" Click="Button_Click_2"/>
                 </Grid>
             </TabItem>
