--- a/Finah-desktop/desktopapp/MainWindow.xaml
+++ b/Finah-desktop/desktopapp/MainWindow.xaml
@@ -10,6 +10,6 @@
         <TextBox x:Name="txtNaam" HorizontalAlignment="Left" Height="23" Margin="194,132,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" ToolTip="geef hier je gebruikersnaam in" KeyDown="OnKeyDownHandler" />
         <PasswordBox x:Name="txtWachtwoord" HorizontalAlignment="Left" Height="23" Margin="194,160,0,0" ToolTip="geef hier je wachtwoord in" VerticalAlignment="Top" Width="120" KeyDown="OnKeyDownHandler" />
         <Button Content="Login" HorizontalAlignment="Left" Margin="122,199,0,0" VerticalAlignment="Top" Click="Button_Click" Width="78"/>
-        <Button Content="Annuleer" HorizontalAlignment="Left" Margin="211,199,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <Button Content="Registreer" HorizontalAlignment="Left" Margin="211,199,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
     </Grid>
 </Window>
