--- a/Finah-desktop/desktopapp/Hulpverlener.xaml
+++ b/Finah-desktop/desktopapp/Hulpverlener.xaml
@@ -7,17 +7,26 @@
         <Label Content="Finah" HorizontalAlignment="Left" Margin="140,59,0,0" VerticalAlignment="Top" FontSize="30" Foreground="White"/>
         <Button Content="Mijn Account" HorizontalAlignment="Left" Margin="818,26,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
         <Button Content="Uitloggen" HorizontalAlignment="Left" Margin="910,26,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <TabControl HorizontalAlignment="Left" Height="436" Margin="140,160,0,0" VerticalAlignment="Top" Width="718">
+        <TabControl HorizontalAlignment="Left" Height="436" Margin="54,160,0,0" VerticalAlignment="Top" Width="884">
             <TabItem Header="Overzicht">
                 <Grid Background="#FFFFFF">
-                    <DataGrid ItemsSource="{Binding}" x:Name="dg_OverzichtHulpverlener" HorizontalAlignment="Left" Margin="26,76,0,0" VerticalAlignment="Top" Height="303" Width="660" AutoGenerateColumns="False">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="Tijdstip" IsReadOnly="True" Width="*" Binding="{Binding tijdstip,StringFormat={}\{0:dd/MM/yyyy HH:mm:ss\}}"></DataGridTextColumn>
-                        <DataGridTextColumn Header="Info" IsReadOnly="True" Width="*" Binding="{Binding patientbeschrijving}"></DataGridTextColumn>
-                        <DataGridTextColumn Header="Categorie" IsReadOnly="True" Width="*" Binding="{Binding categorie}"></DataGridTextColumn>
-                        <DataGridTextColumn Header="Relatie" IsReadOnly="True" Width="*" Binding="{Binding relatie}"></DataGridTextColumn>
-                        <DataGridTextColumn Header="P_leeftijd" IsReadOnly="True" Width="*" Binding="{Binding patientleeftijd}"></DataGridTextColumn>
-                        <DataGridTextColumn Header="M_leeftijd" IsReadOnly="True" Width="*" Binding="{Binding mantelzorgerleeftijd}"></DataGridTextColumn>
+                    <DataGrid ItemsSource="{Binding}" x:Name="dg_OverzichtHulpverlener" HorizontalAlignment="Left" Margin="26,76,0,0" VerticalAlignment="Top" Height="303" Width="826" AutoGenerateColumns="False">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Tijdstip" IsReadOnly="True" Width="*" Binding="{Binding tijdstip,StringFormat={}\{0:dd/MM/yyyy HH:mm:ss\}}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Info" IsReadOnly="True" Width="*" Binding="{Binding patientbeschrijving}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Categorie" IsReadOnly="True" Width="*" Binding="{Binding categorie}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Relatie" IsReadOnly="True" Width="*" Binding="{Binding relatie}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="P_leeftijd" IsReadOnly="True" Width="*" Binding="{Binding patientleeftijd}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="M_leeftijd" IsReadOnly="True" Width="*" Binding="{Binding mantelzorgerleeftijd}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="P_rapport" IsReadOnly="True" Width="*" Binding="{Binding rapportID}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="M_rapport" IsReadOnly="True" Width="*" Binding="{Binding rapportID2}"></DataGridTextColumn>
+                            <DataGridTemplateColumn Header="Rapport">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Content="Rapport"/>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
                         </DataGrid.Columns>
                     </DataGrid>
                     <Button Content="Nieuwe aanvraag" HorizontalAlignment="Left" Margin="26,32,0,0" VerticalAlignment="Top" Width="99" Click="Button_Click_2"/>
@@ -25,6 +34,5 @@
             </TabItem>
         </TabControl>
         <Label x:Name="txtwelkom" Content="Label" HorizontalAlignment="Left" Margin="244,78,0,0" VerticalAlignment="Top"/>
-
     </Grid>
 </Window>
